--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
+    <button class="btn btn-success">New Recipe</button>
+    <hr>
+  </div>
+  <div class="col-xs-12">
+    <a href="#" class="list-group-item clearfix " *ngFor="let recipe of recipes">
       <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
         <p class="list-group-item-text">{{recipe.description}}</p>
