--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,15 +4,7 @@
     <hr>
   </div>
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix " *ngFor="let recipe of recipes">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-        <p class="list-group-item-text">{{recipe.description}}</p>
-      </div>
-      <span class="pull-right">
-        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 50px;">
-      </span>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes;" [recipe]="recipe"
+      (onRecipeSelected)="onRecipeSelected.emit(recipe)"></app-recipe-item>
   </div>
 </div>
