all users in one list

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,20 @@
-<div *ngFor="let user of usersService.users">
-  {{user.userName}} <span class="badge" [ngClass]="user.active ? 'bg-success' : 'bg-danger'">{{user.active ? 'Active' : 'Inactive'}}</span>
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      Users
+    </div>
+    <div class="card-body">
+
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item" *ngFor="let user of usersService.users">
+        {{user.userName}}
+        <a href="#" (click)="user.active = !user.active" >
+        <span class="badge rounded-pill" [ngClass]="user.active ? 'bg-success' : 'bg-danger'">
+          {{user.active ? 'Active' : 'Inactive'}}
+        </span>
+        </a>
+      </li>
+    </ul>
+    </div>
+  </div>
 </div>
