--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (onRecipeSelected)="selectedRecipe = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-detail>
+    <app-recipe-detail *ngIf="recipeService.selectedRecipe; else infoText"></app-recipe-detail>
     <ng-template #infoText>
       <p>Please select a Recipe</p>
     </ng-template>
