--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success m-1" type="button" (click)="addIngredientEvent()">Add</button>
+            <button class="btn btn-success m-1" type="submit" (click)="addIngredientEvent()">Add</button>
             <button class="btn btn-danger m-1" type="button">Delete</button>
             <button class="btn btn-primary m-1" type="button">Clear</button>
           </div>
