--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
     <div class="dropdown">
       <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item nav-link" href="#">Add to Shopping List</a></li>
+        <li><a class="dropdown-item nav-link" href="#" (click)="addToShoppingList()">Add to Shopping List</a></li>
         <li><a class="dropdown-item nav-link" href="#">Edit Recipe</a></li>
         <li><a class="dropdown-item nav-link" href="#">Delete Recipe</a></li>
       </ul>
@@ -21,12 +21,15 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 my-5">
     {{recipeService.selectedRecipe.description}}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <h4 class="ms-1">Ingredients:</h4>
+      <li class="list-group-item" *ngFor="let ingredient of recipeService.selectedRecipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
+    </ul>
   </div>
 </div>
