--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -8,14 +8,13 @@
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount" min="1" class="form-control" value="1" #amountInput>
         </div>
       </div>
       <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success m-1" type="submit" (click)="addIngredientEvent()">Add</button>
-            <button class="btn btn-danger m-1" type="button">Delete</button>
-            <button class="btn btn-primary m-1" type="button">Clear</button>
+            <button class="btn btn-success m-1" type="submit" (click)="addIngredient()">Add</button>
+            <button class="btn btn-primary m-1" type="button" (click)="shoppingListService.ingredients = []">Clear</button>
           </div>
       </div>
     </form>
