add router still not working continue working on mac

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,6 +4,6 @@
     <hr>
   </div>
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipeService.recipes;" [recipe]="recipe"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipeService.recipes; index as i" [routerLink]="[i]"></app-recipe-item>
   </div>
 </div>
