--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <li><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+        <li><a class="nav-link" routerLink="recipe" routerLinkActive="active">Recipes</a></li>
+        <li><a class="nav-link" routerLink="shopping" routerLinkActive="active">Shopping List</a></li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
