--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipeService.selectedRecipe.imagePath" alt="" class="img-responsive" style="max-height: 300px;">
+    <img [src]="selectedRecipe.imagePath" alt="" class="img-responsive" style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12 mt-2">
-    <h1>{{recipeService.selectedRecipe.name}}</h1>
+    <h1>{{selectedRecipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -22,14 +22,14 @@
 </div>
 <div class="row">
   <div class="col-xs-12 my-5">
-    {{recipeService.selectedRecipe.description}}
+    {{selectedRecipe.description}}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
       <h4 class="ms-1">Ingredients:</h4>
-      <li class="list-group-item" *ngFor="let ingredient of recipeService.selectedRecipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
+      <li class="list-group-item" *ngFor="let ingredient of selectedRecipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
     </ul>
   </div>
 </div>
