--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,9 +3,9 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail *ngIf="recipeService.selectedRecipe; else infoText"></app-recipe-detail>
-    <ng-template #infoText>
-      <p>Please select a Recipe</p>
-    </ng-template>
+
+<!--    <app-recipe-detail></app-recipe-detail>-->
+    <router-outlet></router-outlet>
+    <p *ngIf="router.url == '/recipe'">Please select a Recipe</p>
   </div>
 </div>
