--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,9 +13,9 @@
     <div class="dropdown">
       <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item nav-link" href="#" (click)="addToShoppingList()">Add to Shopping List</a></li>
-        <li><a class="dropdown-item nav-link" href="#">Edit Recipe</a></li>
-        <li><a class="dropdown-item nav-link" href="#">Delete Recipe</a></li>
+        <li><a class="dropdown-item nav-link" role="button" (click)="addToShoppingList()">Add to Shopping List</a></li>
+        <li><a class="dropdown-item nav-link" role="button">Edit Recipe</a></li>
+        <li><a class="dropdown-item nav-link" role="button">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
