--- a/src/app/recipes/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a routerLink="" class="list-group-item clearfix">
+<a class="list-group-item clearfix" routerLinkActive="active">
   <div class="float-start">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
