--- a/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
+++ b/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
@@ -13,19 +13,19 @@
   </ng-template>
   <div class="btn-group col-auto ms-auto p-0">
 
-    <a *ngIf="!isEdit; else editToolbox" class="d-flex" href="#">
+    <a *ngIf="!isEdit; else editToolbox" class="d-flex">
       <h5 class="bi bi-pencil-fill link-primary my-auto me-4" ngbTooltip="Edit" (click)="editIngredient()"></h5>
     </a>
     <ng-template #editToolbox>
-      <a class="d-flex" href="#">
+      <a class="d-flex">
         <h5 class="bi bi-save-fill link-success my-auto me-4" ngbTooltip="Save" (click)="saveEdit()"></h5>
       </a>
-      <a class="d-flex" href="#">
+      <a class="d-flex">
         <h5 class="bi bi-x-circle-fill link-warning my-auto me-4" ngbTooltip="Cancel" (click)="cancelEdit()"></h5>
       </a>
     </ng-template>
 
-    <a class="d-flex"  href="#">
+    <a class="d-flex">
       <h5 class="bi bi-trash-fill link-danger my-auto me-2"
           ngbTooltip="Delete"
           (click)="onDeleteIngredient.emit()"></h5>
