--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,19 +1,24 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="addIngredient()" #f="ngForm">
       <div class="row mb-2">
         <div class="col-sm-5 form-group">
-          <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <label class="form-label" for="name">Name:</label>
+          <input type="text" id="name" name="name" class="form-control"
+                 [ngClass]="validatorService.isValid(name)" required ngModel #nameInput='ngModel'>
+          <div class="invalid-feedback">
+            this field is required
+          </div>
         </div>
         <div class="col-sm-2 form-group">
-          <label for="amount">Amount</label>
-          <input type="number" id="amount" min="1" class="form-control" value="1" #amountInput>
+          <label class="form-label" for="amount">Amount:</label>
+          <input type="number" id="amount" name="amount" min="1" class="form-control" (ngModelChange)="checkMaxAmount()"
+                 ngModel="1" #amountInput='ngModel'>
         </div>
       </div>
       <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success m-1" type="submit" (click)="addIngredient()">Add</button>
+            <button class="btn btn-success m-1" type="submit">Add</button>
             <button class="btn btn-primary m-1" type="button" (click)="shoppingListService.ingredients = []">Clear</button>
           </div>
       </div>
