--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -5,14 +5,14 @@
         <div class="col-sm-5 form-group">
           <label class="form-label" for="name">Name:</label>
           <input type="text" id="name" name="name" class="form-control"
-                 [ngClass]="validatorService.isValid(name)" required ngModel #nameInput='ngModel'>
+                 [ngClass]="validatorService.isValid(name)" required ngModel="" #nameInput='ngModel'>
           <div class="invalid-feedback">
             this field is required
           </div>
         </div>
         <div class="col-sm-2 form-group">
           <label class="form-label" for="amount">Amount:</label>
-          <input type="number" id="amount" name="amount" min="1" class="form-control" (ngModelChange)="checkMaxAmount()"
+          <input type="number" id="amount" name="amount" min="1" class="form-control" (ngModelChange)="validatorService.checkMaxAmount(amount)"
                  ngModel="1" #amountInput='ngModel'>
         </div>
       </div>
